dockerised the test service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://dbuser:dbuser@mycluster.bgejb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 spring.data.mongodb.database=Mydatabase
+
+#kafka
+spring.kafka.producer.bootstrap-servers=
